# vf-verifier

./: README.md  stack.yaml  vf-verifier.cabal
src/: Main.hs  Parser.hs  Parser2.hs  SLParser.hs  VCGenerator.hs
test/: ExampleFive.sl  ExampleFour.sl  ExampleOne.sl  ExampleThree.sl  ExampleTwo.sl
