name:                vf-verifier
version:             0.1.0.0
homepage:            https://github.com/githubuser/vf-verifier#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable vf-verifier
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:     SLParser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , z3-encoding
