name:                vf-verifier
version:             1.0.0
synopsis:            Simple Language parser with VC generation and model checking using z3 Theorem Prover
description:
    Formal Verification Assignment.
    .
    Source Assignment description: <https://www.dropbox.com/sh/qymfgg18dga34k2/AAAqLX5rz9q0ayrc1XGecVuha/Trabalho%20Pr%C3%A1tico/TP-VCGen-v2.pdf?dl=0>
homepage:            https://github.com/jbddc/vf-verifier#readme
license:             BSD3
license-file:        LICENSE
author:              João Costa <a70430@alunos.uminho.pt>
                     Rafael Barbosa <a71580@alunos.uminho.pt>
maintainer:          a70430@alunos.uminho.pt
copyright:           2016-2017, Joao Costa, Rafael Barbosa
category:            Parser, SMT, Theorem Provers, Formal Methods
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules: SLParser VCGenerator
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , z3
                     , containers
                     , stm

executable vf-verifier
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SLParser VCGenerator
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , z3
                     , containers
                     , stm
